Implement version 1 of the reddit resolver

--- a/package.json
+++ b/package.json
@@ -1,28 +1,29 @@
 {
-  "name": "giphy-mixmax-app",
+  "name": "mixmax-reddit",
   "version": "0.0.1",
-  "description": "Giphy App for Mixmax",
+  "description": "Reddit image search for Mixmax",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "nodemon --use-strict server.js",
     "test": "open -a Chromium http://mail.google.com --args --allow-running-insecure-content --ignore-certificate-errors"
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/mixmaxhq/giphy-mixmax-app.git"
+    "url": "git://github.com/jedahan/mixmax-reddit.git"
   },
-  "author": "Chanpory Rith <chanpory@mixmax.com> (https://mixmax.com/)",
+  "author": "Jonathan Dahan <hi@jonathan.is>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/mixmaxhq/giphy-mixmax-app/issues"
+    "url": "https://github.com/jedahan/mixmax-reddit/issues"
   },
-  "homepage": "https://github.com/mixmaxhq/giphy-mixmax-app",
+  "homepage": "https://github.com/jedahan/mixmax-reddit",
   "dependencies": {
     "body-parser": "^1.12.2",
     "cors": "^2.7.1",
     "express": "^4.12.3",
     "fibers": "^1.0.7",
     "request": "^2.64.0",
+    "snoocore": "^3.2.0",
     "synchronize": "^0.9.14",
     "underscore": "^1.8.3"
   },
