--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.12.2",
     "cors": "^2.7.1",
     "express": "^4.12.3",
+    "fibers": "^1.0.7",
     "request": "^2.64.0",
     "synchronize": "^0.9.14",
     "underscore": "^1.8.3"
